@@ -1280,9 +1280,15 @@ AC_DEFUN(AM_KDE_WITH_NLS,
     if test "$USE_NLS" = "yes"; then
       AC_DEFINE(ENABLE_NLS)
 
-      AM_PATH_PROG_WITH_TEST_KDE(MSGFMT, msgfmt,
-	[test -z "`$ac_dir/$ac_word -h 2>&1 | grep 'dv '`"], msgfmt)
+      AM_PATH_PROG_WITH_TEST_KDE(MSGFMT, msgfmt, 
+         [test -n "`$ac_dir/$ac_word --version 2>&1 | grep '(GNU gettext)'`"], msgfmt)
       AC_PATH_PROG(GMSGFMT, gmsgfmt, $MSGFMT)
+
+      if test -z "`$MSGFMT 2>&1 | grep 'GNU gettext'`"; then
+        AC_MSG_RESULT([found msgfmt program is not GNU msgfmt; ignore it])
+        msgfmt=":"
+      fi
+
       AM_PATH_PROG_WITH_TEST_KDE(XGETTEXT, xgettext,
 	[test -z "`$ac_dir/$ac_word -h 2>&1 | grep '(HELP)'`"], :)
       AC_SUBST(MSGFMT)
